feat: enhance Dockerfile and security configurations; improve rate limiting and OAuth success handling